[package]
name = "prio"
version = "0.15.0"
authors = ["Josh Aas <jaas@kflag.net>", "Tim Geoghegan <timg@letsencrypt.org>", "Christopher Patton <cpatton@cloudflare.com", "Karl Tarbe <tarbe@apple.com>"]
edition = "2021"
exclude = ["/supply-chain"]
description = "Implementation of the Prio aggregation system core: https://crypto.stanford.edu/prio/"
license = "MPL-2.0"
repository = "https://github.com/divviup/libprio-rs"
rust-version = "1.64"
resolver = "2"

[dependencies]
aes = { version = "0.8.3", optional = true }
bitvec = { version = "1.0.1", optional = true }
byteorder = "1.4.3"
ctr = { version = "0.9.2", optional = true }
fiat-crypto = { version = "0.2.1", optional = true }
fixed = { version = "1.23", optional = true }
getrandom = { version = "0.2.10", features = ["std"] }
hmac = { version = "0.12.1", optional = true }
num-bigint = { version = "0.4.4", optional = true, features = ["rand", "serde"] }
num-integer = { version = "0.1.45", optional = true }
num-iter = { version = "0.1.43", optional = true }
num-rational = { version = "0.4.1", optional = true }
num-traits = { version = "0.2.16", optional = true }
rand = { version = "0.8", optional = true }
rand_core = "0.6.4"
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.7", optional = true }
sha3 = "0.10.8"
subtle = "2.5.0"
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.21.3"
cfg-if = "1.0.0"
criterion = "0.5"
fixed-macro = "1.2.0"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
iai = "0.1"
itertools = "0.11.0"
modinverse = "0.1.0"
num-bigint = "0.4.4"
once_cell = "1.18.0"
prio = { path = ".", features = ["crypto-dependencies", "test-util"] }
rand = "0.8"
serde_json = "1.0"
statrs = "0.16.0"
zipf = "7.0.1"

[features]
default = ["crypto-dependencies"]
experimental = ["bitvec", "fiat-crypto", "fixed", "num-bigint", "num-rational", "num-traits", "num-integer", "num-iter", "rand"]
multithreaded = ["rayon"]
prio2 = ["crypto-dependencies", "hmac", "sha2"]
crypto-dependencies = ["aes", "ctr"]
test-util = []

[workspace]
members = [".", "binaries"]

[lib]
bench = false

[[bench]]
name = "speed_tests"
harness = false

[[bench]]
name = "cycle_counts"
harness = false

[[test]]
name = "discrete_gauss"
path = "tests/discrete_gauss.rs"
required-features = ["experimental"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
