[package]
name = "prio"
version = "0.12.3"
authors = ["Josh Aas <jaas@kflag.net>", "Tim Geoghegan <timg@letsencrypt.org>", "Christopher Patton <cpatton@cloudflare.com", "Karl Tarbe <tarbe@apple.com>"]
edition = "2021"
exclude = ["/supply-chain"]
description = "Implementation of the Prio aggregation system core: https://crypto.stanford.edu/prio/"
license = "MPL-2.0"
repository = "https://github.com/divviup/libprio-rs"
rust-version = "1.64"
resolver = "2"

[dependencies]
aes = { version = "0.8.3", optional = true }
bitvec = { version = "1.0.1", optional = true }
ctr = { version = "0.9.2", optional = true }
cmac = { version = "0.7.2", optional = true }
base64 = "0.21.4"
byteorder = "1.4.3"
fiat-crypto = { version = "0.2.1", optional = true }
fixed = { version = "1.23", optional = true }
getrandom = { version = "0.2.10", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
static_assertions = "1.1.0"
subtle = "2.5.0"
thiserror = "1.0"

# dependencies required if feature "test-util" is enabled
rand = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }

# dependencies required if feature "multithreaded" is enabled
rayon = { version = "1.7.0", optional = true }

# dependencies required if feature "prio2" is enabled
aes-gcm = { version = "^0.10", optional = true }
ring = { version = "0.16.20", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.5"
fixed-macro = "1.2.0"
iai = "0.1"
itertools = "0.11.0"
modinverse = "0.1.0"
num-bigint = "0.4.4"
serde_json = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
# Enable test_vector module for test targets
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
prio = { path = ".", features = ["test-util"] }
cfg-if = "1.0.0"
once_cell = "1.18.0"
zipf = "7.0.1"
hex-literal = "0.4.1"

[features]
default = ["crypto-dependencies"]
experimental = ["bitvec", "fiat-crypto", "fixed"]
test-util = ["rand", "serde_json"]
multithreaded = ["rayon"]
prio2 = ["crypto-dependencies", "aes-gcm", "ring"]
crypto-dependencies = ["aes", "ctr", "cmac"]

[workspace]
members = [".", "binaries"]

[[bench]]
name = "speed_tests"
harness = false

[[bench]]
name = "cycle_counts"
harness = false

[[example]]
name = "sum"
required-features = ["prio2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "backward_compatibility"
path = "tests/backward_compatibility.rs"
required-features = ["prio2"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
