[package]
name = "prio-binaries"
version = "0.5.0"
edition = "2018"
description = "Prio utilities"
license = "MPL-2.0"
repository = "https://github.com/divviup/libprio-rs"

[dependencies]
base64 = "0.20.0"
prio = { path = "..", features = ["test-util", "prio2"] }
color-eyre = { version = "^0.6" }
serde_json = { version = "1.0" }
structopt = { version = "0.3.26" }

[[bin]]
name = "generate-test-vector"
path = "src/bin/generate_test_vector.rs"

[[bin]]
name = "crypt"
path = "src/bin/crypt.rs"
