[package]
name = "prio-binaries"
version = "0.5.0"
edition = "2018"
description = "Prio utilities"
license = "MPL-2.0"
repository = "https://github.com/divviup/libprio-rs"

[dependencies]
base64 = "0.22.0"
fixed = "1.27"
fixed-macro = "1.2.0"
prio = { path = "..", features = ["prio2", "experimental"] }
